<resources>
    <string name="app_name">Android-HW-6.1</string>
    <string name="main_activity_name">Калькулятор</string>
    <string name="text_view_default_value">0</string>
    <string name="btn_seven">7</string>
    <string name="btn_eight">8</string>
    <string name="btn_nine">9</string>
    <string name="btn_four">4</string>
    <string name="btn_five">5</string>
    <string name="btn_six">6</string>
    <string name="btn_one">1</string>
    <string name="btn_two">2</string>
    <string name="btn_three">3</string>
    <string name="btn_dot">.</string>
    <string name="btn_zero">0</string>
    <string name="too_many_characters">Слишком много символов!</string>
</resources>