<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textViewValues"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:text="@string/text_view_default_value"
        android:textColor="@android:color/black"
        android:textAlignment="textEnd"
        android:padding="20dp"
        android:background="@drawable/text_view_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/firstRowBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnSeven"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_seven"
            android:textSize="20sp"
            android:padding="20dp"
            />

        <Button
            android:id="@+id/btnEight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_eight"
            android:textSize="20sp"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnNine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_nine"
            android:textSize="20sp"
            android:padding="20dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondRowBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        >

    <Button
        android:id="@+id/btnFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_four"
        android:textSize="20sp"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnFive"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_five"
        android:textSize="20sp"
        android:padding="20dp" />

    <Button
        android:id="@+id/btnSix"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/btn_six"
        android:textSize="20sp"
        android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/thirdRowBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_one"
            android:textSize="20sp"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_two"
            android:textSize="20sp"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnThree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_three"
            android:textSize="20sp"
            android:padding="20dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lustRowBtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="3dp"
        android:layout_marginRight="3dp"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnZero"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_zero"
            android:textSize="20sp"
            android:padding="20dp" />

        <Button
            android:id="@+id/btnDot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/btn_dot"
            android:textSize="20sp"
            android:padding="20dp" />

    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>